CREATE TABLE IF NOT EXISTS nodes (
    node_id VARCHAR(255) PRIMARY KEY,
    node_kind VARCHAR(31) NOT NULL,
    name VARCHAR(255) NOT NULL,
    type VARCHAR(255) NOT NULL,
    longitude DOUBLE PRECISION NOT NULL,
    latitude DOUBLE PRECISION NOT NULL,
    population INTEGER
);

CREATE TABLE IF NOT EXISTS roads (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    from_node_id VARCHAR(255) NOT NULL,
    to_node_id VARCHAR(255) NOT NULL,
    distance_km DOUBLE PRECISION NOT NULL,
    capacity_vph INTEGER NOT NULL,
    condition INTEGER NOT NULL,
    CONSTRAINT fk_roads_from_node FOREIGN KEY (from_node_id) REFERENCES nodes (node_id),
    CONSTRAINT fk_roads_to_node FOREIGN KEY (to_node_id) REFERENCES nodes (node_id)
);

CREATE TABLE IF NOT EXISTS potential_roads (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    from_node_id VARCHAR(255) NOT NULL,
    to_node_id VARCHAR(255) NOT NULL,
    distance_km DOUBLE PRECISION NOT NULL,
    capacity_vph INTEGER NOT NULL,
    construction_costmegp INTEGER NOT NULL,
    CONSTRAINT fk_potential_roads_from_node FOREIGN KEY (from_node_id) REFERENCES nodes (node_id),
    CONSTRAINT fk_potential_roads_to_node FOREIGN KEY (to_node_id) REFERENCES nodes (node_id)
);

CREATE TABLE IF NOT EXISTS traffic_patterns (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    road_id BIGINT NOT NULL UNIQUE,
    morning_peak_vph INTEGER NOT NULL,
    afternoon_vph INTEGER NOT NULL,
    evening_peak_vph INTEGER NOT NULL,
    night_vph INTEGER NOT NULL,
    CONSTRAINT fk_traffic_patterns_road FOREIGN KEY (road_id) REFERENCES roads (id)
);

CREATE TABLE IF NOT EXISTS metro_lines (
    line_id VARCHAR(255) PRIMARY KEY,
    name VARCHAR(255) NOT NULL,
    daily_passengers INTEGER NOT NULL
);

CREATE TABLE IF NOT EXISTS metro_line_stations (
    line_id VARCHAR(255) NOT NULL,
    station_order INTEGER NOT NULL,
    node_id VARCHAR(255) NOT NULL,
    PRIMARY KEY (line_id, station_order),
    CONSTRAINT fk_metro_line_stations_line FOREIGN KEY (line_id) REFERENCES metro_lines (line_id),
    CONSTRAINT fk_metro_line_stations_node FOREIGN KEY (node_id) REFERENCES nodes (node_id)
);

CREATE TABLE IF NOT EXISTS bus_routes (
    route_id VARCHAR(255) PRIMARY KEY,
    buses_assigned INTEGER NOT NULL,
    daily_passengers INTEGER NOT NULL
);

CREATE TABLE IF NOT EXISTS bus_route_stops (
    route_id VARCHAR(255) NOT NULL,
    stop_order INTEGER NOT NULL,
    node_id VARCHAR(255) NOT NULL,
    PRIMARY KEY (route_id, stop_order),
    CONSTRAINT fk_bus_route_stops_route FOREIGN KEY (route_id) REFERENCES bus_routes (route_id),
    CONSTRAINT fk_bus_route_stops_node FOREIGN KEY (node_id) REFERENCES nodes (node_id)
);

CREATE TABLE IF NOT EXISTS transit_demands (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    from_node_id VARCHAR(255) NOT NULL,
    to_node_id VARCHAR(255) NOT NULL,
    daily_passengers INTEGER NOT NULL,
    CONSTRAINT fk_transit_demands_from_node FOREIGN KEY (from_node_id) REFERENCES nodes (node_id),
    CONSTRAINT fk_transit_demands_to_node FOREIGN KEY (to_node_id) REFERENCES nodes (node_id)
);

CREATE INDEX IF NOT EXISTS idx_roads_from_node_id ON roads (from_node_id);
CREATE INDEX IF NOT EXISTS idx_roads_to_node_id ON roads (to_node_id);
CREATE INDEX IF NOT EXISTS idx_potential_roads_from_node_id ON potential_roads (from_node_id);
CREATE INDEX IF NOT EXISTS idx_potential_roads_to_node_id ON potential_roads (to_node_id);
CREATE INDEX IF NOT EXISTS idx_transit_demands_from_node_id ON transit_demands (from_node_id);
CREATE INDEX IF NOT EXISTS idx_transit_demands_to_node_id ON transit_demands (to_node_id);
